# nmpc_uav_avoidancce

./: frames_2026-02-06_16.59.08.gv
install/: local_setup.sh  setup.sh
install/nmpc_uav_avoidance/include/nmpc_uav_avoidance/: nmpc_node.hpp  open_solver.hpp
install/nmpc_uav_avoidance/share/nmpc_uav_avoidance/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/nmpc_uav_avoidance/share/nmpc_uav_avoidance/cmake/: nmpc_uav_avoidanceConfig.cmake
install/px4_msgs/share/ament_index/resource_index/parent_prefix_path/: px4_msgs
install/px4_msgs/share/px4_msgs/: package.sh
install/px4_ros_com/lib/px4_ros_com/: circle_flight  crazy_path  debug_vect_advertiser  figure_eight_planner  global_path  goal_interactive_marker  goal_marker_pub  gripper_send_two  gripper_send_zero  ground_odom  imu_fmu_to_odom.py  nav_path  obstacle_odom_publisher  octomap_boxes_rviz_node  offboard_circle_control  offboard_control  offboard_control_srv  sensor_combined_listener  tf2_control  vehicle_gps_position_listener  vtol_mission_node
install/px4_ros_com/share/ament_index/resource_index/package_run_dependencies/: px4_ros_com
install/px4_ros_com/share/px4_ros_com/: local_setup.sh  package.sh  package.xml
install/px4_ros_com/share/px4_ros_com/launch/: 123.launch.py  lidar_octomap_launch.py  path.launch.py  path.py  path_follower_launch.py  rtab_points.launch.py
install/vertiport/share/vertiport/: package.bash  package.zsh
log/: latest_build  latest_list
src/: frames_2025-10-30_22.03.37.gv  uav_camera_websend3.py  uav_camera_websend4.py
src/nmpc_uav_avoidance/: CMakeLists.txt  generate_solver.py
src/nmpc_uav_avoidance/launch/: nmpc_launch.py
src/nmpc_uav_avoidance/nmpc_solver/nmpc_uav_obstacle/: CMakeLists.txt  Cargo.toml  build.rs  example_optimizer.c  nmpc_uav_obstacle_bindings.h  nmpc_uav_obstacle_bindings.hpp  optimizer.yml
src/nmpc_uav_avoidance/nmpc_solver/nmpc_uav_obstacle/icasadi_nmpc_uav_obstacle/: Cargo.toml
src/nmpc_uav_avoidance/nmpc_solver/nmpc_uav_obstacle/icasadi_nmpc_uav_obstacle/src/: lib.rs
src/nmpc_uav_avoidance/nmpc_solver/nmpc_uav_obstacle/src/: lib.rs
src/nmpc_uav_avoidance/nmpc_solver/nmpc_uav_obstacle/tcp_iface_nmpc_uav_obstacle/: Cargo.toml
src/nmpc_uav_avoidance/nmpc_solver/nmpc_uav_obstacle/tcp_iface_nmpc_uav_obstacle/src/: main.rs
src/nmpc_uav_avoidance/src/: main.cpp  nmpc_node.cpp  odom_publisher.cpp
